--- a/karl/seleniumtests/calendar/calendar_add_event.html
+++ b/karl/seleniumtests/calendar/calendar_add_event.html
@@ -13,7 +13,7 @@
 </thead><tbody>
 <tr>
 	<td>open</td>
-	<td>/communities/selenium_test/calendar/?status_message=Deleted+calendar+event+123</td>
+	<td>/communities/selenium_test/calendar/</td>
 	<td></td>
 </tr>
 <tr>
@@ -38,12 +38,12 @@
 </tr>
 <tr>
 	<td>click</td>
-	<td>sendalert-false</td>
+	<td>save-sendalert</td>
 	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>form-submit</td>
+	<td>submit</td>
 	<td></td>
 </tr>
 <tr>
