--- a/karl/seleniumtests/calendar/calendar_edit_event.html
+++ b/karl/seleniumtests/calendar/calendar_edit_event.html
@@ -13,7 +13,7 @@
 </thead><tbody>
 <tr>
 	<td>open</td>
-	<td>/communities/selenium_test</td>
+	<td>/communities/selenium_test/</td>
 	<td></td>
 </tr>
 <tr>
@@ -33,7 +33,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>form-submit</td>
+	<td>submit</td>
 	<td></td>
 </tr>
 <tr>
