Various imagedrawer fixes and improvements
  Retab template
  Remove cancel from next to Upload button
  Make fileupload capable of passing other (string) parameters
  Remove image batch from the file upload result,
    since the client does not need it any more.
  Implement upload results display
  Improve upload status reporting
  Implement statusbox support in info panel.
    also: include refactored multistatusbox code.
  Space scrollbar
  Add the preview and status handling to the external source as well.
  Add help dialog

--- a/karl/seleniumtests/all_suite.html
+++ b/karl/seleniumtests/all_suite.html
@@ -44,6 +44,7 @@
 <tr><td><a href="community/remove_community.html">remove_community</a></td></tr>
 <tr><td><a href="login/logout.html">logout</a></td></tr>
 <tr><td><a href="qunit/qunit_karl-buttonset.html">qunit karl-buttonset</a></td></tr>
+<tr><td><a href="qunit/qunit_ui-multistatusbox.html">qunit ui-multistatusbox</a></td></tr>
 </tbody></table>
 </body>
 </html>
