--- a/karl/seleniumtests/qunit/qunit_ui-multistatusbox.html
+++ b/karl/seleniumtests/qunit/qunit_ui-multistatusbox.html
@@ -9,11 +9,11 @@
 <body>
 <table cellpadding="1" cellspacing="1" border="1">
 <thead>
-<tr><td rowspan="1" colspan="3">qunit karl-buttonset</td></tr>
+<tr><td rowspan="1" colspan="3">qunit ui-multistatusbox</td></tr>
 </thead><tbody>
 <tr>
 	<td>open</td>
-	<td>/static/jquery-ui/karl-buttonset/demo_test.html</td>
+	<td>/static/jquery-ui/ui-multistatusbox/demo_test.html</td>
 	<td></td>
 </tr>
 <tr>
