imagedrawer: change slider to behave more scrollbar-like (clicks should increment instead of positioning)

--- a/karl/seleniumtests/all_suite.html
+++ b/karl/seleniumtests/all_suite.html
@@ -46,6 +46,8 @@
 <tr><td><a href="qunit/qunit_karl-buttonset.html">qunit karl-buttonset</a></td></tr>
 <tr><td><a href="qunit/qunit_ui-multistatusbox.html">qunit ui-multistatusbox</a></td></tr>
 <tr><td><a href="qunit/qunit_karl-captionedimage.html">qunit karl-captionedimage</a></td></tr>
+<tr><td><a href="qunit/qunit_karl-slider.html">qunit karl-slider</a></td></tr>
+<tr><td><a href="qunit/qunit_karl-slider_regression.html">qunit karl-slider upstream regression</a></td></tr>
 </tbody></table>
 </body>
 </html>
