Various imagedrawer fixes
- Fix and restyle Upload panel
  * Fix the upload/reset buttons

- Fix Web tab similar as upload
  * Add "None Selected" label in web tab
  * Change button label Check to Preview in the Web panel

- Better handling of replace images
  * Autodetect and handle replace options
  * Handle external (web) replace images
  * Implement internal replace images

- Remove All KARL tab completely

- Disable captions

- IE bugs
  * solve IE7 form bug - caused form values in info panel reseted
  * Fix include domain parts on IE
  * other ...

- Other changes
  * Additional styling on upload and web
  * Move imagedrawer_dialog_snippet to the plugin

--- a/karl/seleniumtests/all_suite.html
+++ b/karl/seleniumtests/all_suite.html
@@ -48,6 +48,7 @@
 <tr><td><a href="qunit/qunit_karl-captionedimage.html">qunit karl-captionedimage</a></td></tr>
 <tr><td><a href="qunit/qunit_karl-slider.html">qunit karl-slider</a></td></tr>
 <tr><td><a href="qunit/qunit_karl-slider_regression.html">qunit karl-slider upstream regression</a></td></tr>
+<tr><td><a href="qunit/qunit_tiny-imagedrawer_notiny.html">qunit tiny-imagedrawer "notiny" (jquery-ui only, no tinymce)</a></td></tr>
 </tbody></table>
 </body>
 </html>
