--- a/karl/seleniumtests/tagging/add_tags.html
+++ b/karl/seleniumtests/tagging/add_tags.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head profile="http://selenium-ide.openqa.org/profiles/test-case">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<link rel="selenium.base" href="" />
+<link rel="selenium.base" href="http://staging.osi.sixfeetup.com/" />
 <title>add_tags</title>
 </head>
 <body>
@@ -26,7 +26,6 @@
 	<td>//button[@type='button']</td>
 	<td></td>
 </tr>
-
 </tbody></table>
 </body>
 </html>
