--- a/karl/seleniumtests/tagging/delete_tags.html
+++ b/karl/seleniumtests/tagging/delete_tags.html
@@ -13,12 +13,27 @@
 </thead><tbody>
 <tr>
 	<td>open</td>
-	<td>/profiles/jpglenn09</td>
+	<td>/communities/selenium_test/view.html</td>
 	<td></td>
 </tr>
 <tr>
-	<td>click</td>
-	<td>//li[@id='bit-0']/span/a[2]</td>
+	<td>clickAndWait</td>
+	<td>link=My Profile</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>link=Manage Tags</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>Manage Tags</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>form.delete</td>
 	<td></td>
 </tr>
 
