--- a/karl/seleniumtests/all_suite.html
+++ b/karl/seleniumtests/all_suite.html
@@ -49,6 +49,7 @@
 <tr><td><a href="qunit/qunit_karl-slider.html">qunit karl-slider</a></td></tr>
 <tr><td><a href="qunit/qunit_karl-slider_regression.html">qunit karl-slider upstream regression</a></td></tr>
 <tr><td><a href="qunit/qunit_tiny-imagedrawer_notiny.html">qunit tiny-imagedrawer "notiny" (jquery-ui only, no tinymce)</a></td></tr>
+<tr><td><a href="qunit/qunit_karl-datetimepicker.html">qunit karl-datetimepicker</a></td></tr>
 </tbody></table>
 </body>
 </html>
