--- a/karl/seleniumtests/search/wiki_search.html
+++ b/karl/seleniumtests/search/wiki_search.html
@@ -28,7 +28,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>//input[@value='SEARCH COMMUNITY']</td>
+	<td>//button[span='Search Community']</td>
 	<td></td>
 </tr>
 <tr>
