fixed a test in tagging due to changes in css

--- a/karl/seleniumtests/tagging/view_tags.html
+++ b/karl/seleniumtests/tagging/view_tags.html
@@ -18,12 +18,12 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>//img[@alt='Tags']</td>
+	<td>//div[@id='cheader']/span/a[2]</td>
 	<td></td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>link=Tag listing</td>
+	<td>assertTextPresent</td>
+	<td>Tag Cloud</td>
 	<td></td>
 </tr>
 
