Javascript housekeeping. Move our own stuff to where it belongs. This is no change in code or composition, just moving things around and updating references as needed.

--- a/karl/seleniumtests/static-only.html
+++ b/karl/seleniumtests/static-only.html
@@ -9,7 +9,7 @@
 <table id="suiteTable" cellpadding="1" cellspacing="1" border="1" class="selenium"><tbody>
 <tr><td><b>Static only test Suite</b></td></tr>
 <tr><td><a href="qunit/qunit_karl-buttonset.html">qunit karl-buttonset</a></td></tr>
-<tr><td><a href="qunit/qunit_ui-multistatusbox.html">qunit ui-multistatusbox</a></td></tr>
+<tr><td><a href="qunit/qunit_karl-multistatusbox.html">qunit karl-multistatusbox</a></td></tr>
 <tr><td><a href="qunit/qunit_karl-captionedimage.html">qunit karl-captionedimage</a></td></tr>
 <tr><td><a href="qunit/qunit_karl-slider.html">qunit karl-slider</a></td></tr>
 <tr><td><a href="qunit/qunit_karl-slider_regression.html">qunit karl-slider upstream regression</a></td></tr>
