--- a/karl/seleniumtests/all_suite.html
+++ b/karl/seleniumtests/all_suite.html
@@ -44,7 +44,7 @@
 <tr><td><a href="community/remove_community.html">remove_community</a></td></tr>
 <tr><td><a href="login/logout.html">logout</a></td></tr>
 <tr><td><a href="qunit/qunit_karl-buttonset.html">qunit karl-buttonset</a></td></tr>
-<tr><td><a href="qunit/qunit_ui-multistatusbox.html">qunit ui-multistatusbox</a></td></tr>
+<tr><td><a href="qunit/qunit_karl-multistatusbox.html">qunit karl-multistatusbox</a></td></tr>
 <tr><td><a href="qunit/qunit_karl-captionedimage.html">qunit karl-captionedimage</a></td></tr>
 <tr><td><a href="qunit/qunit_karl-slider.html">qunit karl-slider</a></td></tr>
 <tr><td><a href="qunit/qunit_karl-slider_regression.html">qunit karl-slider upstream regression</a></td></tr>
