--- a/karl/seleniumtests/qunit/qunit_karl-multistatusbox.html
+++ b/karl/seleniumtests/qunit/qunit_karl-multistatusbox.html
@@ -4,16 +4,16 @@
 <head profile="http://selenium-ide.openqa.org/profiles/test-case">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="selenium.base" href="" />
-<title>wiki</title>
+<title>qunit karl-multistatusbox</title>
 </head>
 <body>
 <table cellpadding="1" cellspacing="1" border="1">
 <thead>
-<tr><td rowspan="1" colspan="3">qunit ui-multistatusbox</td></tr>
+<tr><td rowspan="1" colspan="3">qunit karl-multistatusbox</td></tr>
 </thead><tbody>
 <tr>
 	<td>open</td>
-	<td>/static/jquery-ui/ui-multistatusbox/demo_test.html</td>
+	<td>/static/karl-plugins/karl-multistatusbox/demo_test.html</td>
 	<td></td>
 </tr>
 <tr>
