--- a/karl/seleniumtests/OSI_Suite.html
+++ b/karl/seleniumtests/OSI_Suite.html
@@ -11,6 +11,8 @@
 <tr><td><a href="login/login_admin.html">login_admin</a></td></tr>
 <tr><td><a href="community/make_community.html">make_community</a></td></tr>
 <tr><td><a href="search/community_search.html">community_search</a></td></tr>
+<tr><td><a href="community/test1.html">view_set_preferred</a></td></tr>
+<tr><td><a href="community/test2.html">edit_set_preferred</a></td></tr>
 <tr><td><a href="blog/blog_view.html">blog_view</a></td></tr>
 <tr><td><a href="blog/blogentry_add.html">blogentry_add</a></td></tr>
 <tr><td><a href="search/blog_search.html">blog_search</a></td></tr>
@@ -44,6 +46,19 @@
 <tr><td><a href="tagging/delete_tags.html">delete_tags</a></td></tr>
 <tr><td><a href="community/remove_community.html">remove_community</a></td></tr>
 <tr><td><a href="login/logout.html">logout</a></td></tr>
+<tr><td><a href="qunit/qunit_karl-buttonset.html">qunit karl-buttonset</a></td></tr>
+<tr><td><a href="qunit/qunit_karl-multistatusbox.html">qunit karl-multistatusbox</a></td></tr>
+<tr><td><a href="qunit/qunit_karl-captionedimage.html">qunit karl-captionedimage</a></td></tr>
+<tr><td><a href="qunit/qunit_karl-slider.html">qunit karl-slider</a></td></tr>
+<tr><td><a href="qunit/qunit_karl-slider_regression.html">qunit karl-slider upstream regression</a></td></tr>
+<tr><td><a href="qunit/qunit_karl-datetimepicker.html">qunit karl-datetimepicker</a></td></tr>
+<tr><td><a href="qunit/qunit_tiny-imagedrawer.html">qunit tinymce imagedrawer plugin</a></td></tr>
+<tr><td><a href="qunit/qunit_tiny-imagedrawer_notiny.html">qunit tiny-imagedrawer "notiny" (jquery-ui only, no tinymce)</a></td></tr>
+<tr><td><a href="qunit/qunit_tiny-wicked.html">qunit tinymce wicked plugin</a></td></tr>
+<tr><td><a href="qunit/qunit_tiny-karlskin.html">qunit tinymce karl skin</a></td></tr>
+<tr><td><a href="qunit/qunit_tiny-spellchecker.html">qunit tinymce spellchecker plugin</a></td></tr>
+<tr><td><a href="qunit/qunit_tiny-paste.html">qunit tinymce paste plugin</a></td></tr>
+<tr><td><a href="qunit/qunit_karl-contentfeeds.html">qunit karl.contentfeeds</a></td></tr>
 </tbody></table>
 </body>
 </html>
