--- a/karl/seleniumtests/staging_suite1.html
+++ b/karl/seleniumtests/staging_suite1.html
@@ -39,6 +39,16 @@
 <tr><td><a href="qunit/qunit_karl-buttonset.html">qunit karl-buttonset</a></td></tr>
 <tr><td><a href="qunit/qunit_karl-multistatusbox.html">qunit karl-multistatusbox</a></td></tr>
 <tr><td><a href="qunit/qunit_karl-captionedimage.html">qunit karl-captionedimage</a></td></tr>
+<tr><td><a href="qunit/qunit_karl-slider.html">qunit karl-slider</a></td></tr>
+<tr><td><a href="qunit/qunit_karl-slider_regression.html">qunit karl-slider upstream regression</a></td></tr>
+<tr><td><a href="qunit/qunit_karl-datetimepicker.html">qunit karl-datetimepicker</a></td></tr>
+<tr><td><a href="qunit/qunit_tiny-imagedrawer.html">qunit tinymce imagedrawer plugin</a></td></tr>
+<tr><td><a href="qunit/qunit_tiny-imagedrawer_notiny.html">qunit tiny-imagedrawer "notiny" (jquery-ui only, no tinymce)</a></td></tr>
+<tr><td><a href="qunit/qunit_tiny-wicked.html">qunit tinymce wicked plugin</a></td></tr>
+<tr><td><a href="qunit/qunit_tiny-karlskin.html">qunit tinymce karl skin</a></td></tr>
+<tr><td><a href="qunit/qunit_tiny-spellchecker.html">qunit tinymce spellchecker plugin</a></td></tr>
+<tr><td><a href="qunit/qunit_tiny-paste.html">qunit tinymce paste plugin</a></td></tr>
+<tr><td><a href="qunit/qunit_karl-contentfeeds.html">qunit karl.contentfeeds</a></td></tr>
 </tbody></table>
 </body>
 </html>
