fix selenium tests (please confirm that this really works)

--- a/karl/seleniumtests/search/offices_search.html
+++ b/karl/seleniumtests/search/offices_search.html
@@ -23,7 +23,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>//button[span='Search Community']</td>
+	<td>//button[@class='search-community-button']</td>
 	<td></td>
 </tr>
 <tr>
