progress with porting selenium tests

--- a/karl/seleniumtests/community/make_community.html
+++ b/karl/seleniumtests/community/make_community.html
@@ -23,12 +23,12 @@
 </tr>
 <tr>
 	<td>type</td>
-	<td>title</td>
+	<td>name=title</td>
 	<td>selenium_test</td>
 </tr>
 <tr>
 	<td>type</td>
-	<td>description</td>
+	<td>name=description</td>
 	<td>This is a test of Karl Under Selenium.</td>
 </tr>
 <tr>
@@ -38,7 +38,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>submit</td>
+	<td>name=submit</td>
 	<td></td>
 </tr>
 <tr>
