Cleanup and prepare selenium tests for conversion

--- a/karl/seleniumtests/login/login_admin.html
+++ b/karl/seleniumtests/login/login_admin.html
@@ -19,23 +19,23 @@
 <tr>
 	<td>type</td>
 	<td>login</td>
-	<td>jpglenn09</td>
+	<td>admin</td>
 </tr>
 <tr>
 	<td>type</td>
 	<td>password</td>
-	<td>finbartech</td>
+	<td>admin</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
 	<td>image</td>
 	<td></td>
 </tr>
-<tr>
+<!--tr>
 	<td>verifyTextPresent</td>
 	<td>Communities</td>
 	<td></td>
-</tr>
+</tr-->
 
 </tbody></table>
 </body>
