--- a/karl/seleniumtests/tagging/add_tags.html
+++ b/karl/seleniumtests/tagging/add_tags.html
@@ -3,7 +3,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head profile="http://selenium-ide.openqa.org/profiles/test-case">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<link rel="selenium.base" href="http://staging.osi.sixfeetup.com/" />
 <title>add_tags</title>
 </head>
 <body>
@@ -13,7 +12,7 @@
 </thead><tbody>
 <tr>
 	<td>open</td>
-	<td>/profiles/jpglenn09</td>
+	<td>/profiles/admin</td>
 	<td></td>
 </tr>
 <tr>
