Add the first e2e test (login and logout)

--- a/karl/seleniumtests/login/login_admin.html
+++ b/karl/seleniumtests/login/login_admin.html
@@ -18,24 +18,24 @@
 </tr>
 <tr>
 	<td>type</td>
-	<td>login</td>
+	<td>name=login</td>
 	<td>admin</td>
 </tr>
 <tr>
 	<td>type</td>
-	<td>password</td>
+	<td>name=password</td>
 	<td>admin</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>image</td>
+	<td>id=image</td>
 	<td></td>
 </tr>
-<!--tr>
+<tr>
 	<td>verifyTextPresent</td>
 	<td>Communities</td>
 	<td></td>
-</tr-->
+</tr>
 
 </tbody></table>
 </body>
